[Codegen][GPU] Add placeholder op for buffer casts on tensors (#20589)
Introduces iree_gpu.buffer_resource_cast to represent where to insert
amdgpu.fat_raw_buffer_cast ops when bufferizing. It also supports taking
a cache_swizzle stride. To avoid colliding the the existing plumbing of
amdgpu buffer resources, there is a pass that walks producers of these
cast ops and either drops the casts or drops the annotation on the
binding.

Right now the verification for cache_swizzle is simply checking for a
chain of single-use producers, but in the future we can add more
involved verification that checks that all users specify the same cache
swizzle value.

--- a/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
@@ -53,6 +53,7 @@ iree_compiler_cc_library(
         "DecomposeHorizontallyFusedGemms.cpp",
         "ExpandGPUOps.cpp",
         "GPUApplyTilingLevel.cpp",
+        "GPUBubbleResourceCasts.cpp",
         "GPUCheckResourceUsage.cpp",
         "GPUCombineValueBarriers.cpp",
         "GPUCreateFastSlowPath.cpp",
@@ -109,6 +110,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Codegen/Utils:VectorOpUtils",
         "//compiler/src/iree/compiler/Dialect/HAL/IR",
         "//compiler/src/iree/compiler/Dialect/LinalgExt/Utils",
+        "//compiler/src/iree/compiler/Dialect/TensorExt/IR",
         "//compiler/src/iree/compiler/Utils",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:AMDGPUDialect",
