--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/test/CMakeLists.txt
@@ -14,6 +14,7 @@ iree_lit_test_suite(
   NAME
     lit
   SRCS
+    "canonicalize.mlir"
     "iree_gpu_attrs.mlir"
     "iree_gpu_ops.mlir"
     "target_attrs.mlir"
