--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -304,6 +304,7 @@ if(IREE_BUILD_COMPILER)
     SRCS
       "iree-compile-main.cc"
     DEPS
+      iree::base
       iree::compiler::bindings::c::headers
       iree::compiler::API::Impl
     DATA
@@ -319,6 +320,7 @@ if(IREE_BUILD_COMPILER)
     SRCS
       "iree-reduce.cc"
     DEPS
+      iree::base
       iree::compiler::bindings::c::headers
       iree::compiler::API::Impl
     DATA
@@ -352,6 +354,7 @@ if(IREE_BUILD_COMPILER)
     SRCS
       "iree-opt-main.cc"
     DEPS
+      iree::base
       iree::compiler::bindings::c::headers
       iree::compiler::API::Impl
     DATA
