Adding pass documentation for IREE dialects and pipelines. (#20705)
This organizes the dialects section and adds a passes section:

![image](https://github.com/user-attachments/assets/2a398083-69cd-40b1-b298-678640934b7e)

![image](https://github.com/user-attachments/assets/7edcea22-efe9-4b81-aac1-58da7dc069c4)

This is not perfect, but it's _something_. I did not try to enumerate
the passes in the index - someone (or me) can do that in the future,
particularly paying attention to organizing the overall flow of
pipelines (the nav bar is not the place to do that, given the various
codegen pipelines that need to be divided by target).

Fixes #18246 (this implements all dialects/pipelines and scotts
feedback).

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -4,7 +4,12 @@
 # See https://llvm.org/LICENSE.txt for license information.
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-load("//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_cc_library", "iree_gentbl_cc_library")
+load(
+    "//build_tools/bazel:build_defs.oss.bzl",
+    "iree_compiler_cc_library",
+    "iree_gentbl_cc_library",
+    "iree_tablegen_doc",
+)
 
 package(
     default_visibility = ["//visibility:public"],
@@ -354,5 +359,23 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:TensorTransformOps",
         "@llvm-project//mlir:TransformLoopExtension",
         "@llvm-project//mlir:VectorTransformOps",
+    ],
+)
+
+iree_tablegen_doc(
+    name = "CodegenCommonPassesDocGen",
+    category = "Passes",
+    tbl_outs = [
+        (
+            [
+                "--gen-pass-doc",
+            ],
+            "CodegenCommonPasses.md",
+        ),
+    ],
+    tblgen = "@llvm-project//mlir:mlir-tblgen",
+    td_file = "Passes.td",
+    deps = [
+        "@llvm-project//mlir:PassBaseTdFiles",
     ],
 )
