--- a/compiler/src/iree/compiler/Codegen/Dialect/VectorExt/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/VectorExt/IR/BUILD.bazel
@@ -177,6 +177,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "IREEVectorExtDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
