--- a/compiler/src/iree/compiler/Dialect/Encoding/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Encoding/IR/CMakeLists.txt
@@ -106,6 +106,8 @@ iree_tablegen_library(
 iree_tablegen_doc(
   NAME
     EncodingDialectDocGen
+  CATEGORY
+    "Dialects"
   TD_FILE
     "EncodingOps.td"
   OUTS
