--- a/compiler/src/iree/compiler/Dialect/Flow/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Flow/IR/CMakeLists.txt
@@ -111,6 +111,8 @@ iree_tablegen_library(
 iree_tablegen_doc(
   NAME
     FlowDialectDocGen
+  CATEGORY
+    "Dialects"
   TD_FILE
     "FlowOps.td"
   OUTS
