--- a/compiler/src/iree/compiler/Dialect/LinalgExt/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/IR/BUILD.bazel
@@ -187,6 +187,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "LinalgExtDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
