--- a/compiler/src/iree/compiler/Dialect/LinalgExt/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/IR/CMakeLists.txt
@@ -102,6 +102,8 @@ iree_tablegen_library(
 iree_tablegen_doc(
   NAME
     LinalgExtDialectDocGen
+  CATEGORY
+    "Dialects"
   TD_FILE
     "LinalgExtOps.td"
   OUTS
