--- a/compiler/src/iree/compiler/Modules/Check/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Modules/Check/IR/BUILD.bazel
@@ -88,6 +88,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "CheckDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
