--- a/compiler/src/iree/compiler/Modules/IO/Parameters/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Modules/IO/Parameters/IR/BUILD.bazel
@@ -102,6 +102,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "IOParametersDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
