--- a/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/BUILD.bazel
@@ -232,6 +232,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "IREECodegenDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
