--- a/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/CMakeLists.txt
@@ -137,6 +137,8 @@ iree_tablegen_library(
 iree_tablegen_doc(
   NAME
     IREECodegenDialectDocGen
+  CATEGORY
+    "Dialects"
   TD_FILE
     "IREECodegenOps.td"
   OUTS
