--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
@@ -203,6 +203,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "IREEGPUDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
