--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/CMakeLists.txt
@@ -127,6 +127,8 @@ iree_tablegen_library(
 iree_tablegen_doc(
   NAME
     IREEGPUDialectDocGen
+  CATEGORY
+    "Dialects"
   TD_FILE
     "IREEGPUOps.td"
   OUTS
