--- a/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Encoding/IR/BUILD.bazel
@@ -201,6 +201,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "EncodingDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
