--- a/compiler/src/iree/compiler/Dialect/Flow/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Flow/IR/BUILD.bazel
@@ -190,6 +190,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "FlowDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
