--- a/compiler/src/iree/compiler/Dialect/HAL/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/HAL/IR/BUILD.bazel
@@ -204,6 +204,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "HALDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
