--- a/compiler/src/iree/compiler/Dialect/Stream/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/IR/BUILD.bazel
@@ -192,6 +192,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "StreamDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
