--- a/compiler/src/iree/compiler/Dialect/TensorExt/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/IR/BUILD.bazel
@@ -94,6 +94,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "TensorExtDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
