--- a/compiler/src/iree/compiler/Dialect/Util/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Util/IR/BUILD.bazel
@@ -194,6 +194,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "UtilDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
