--- a/compiler/src/iree/compiler/Dialect/VM/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/IR/BUILD.bazel
@@ -174,6 +174,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "VMDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
