--- a/compiler/src/iree/compiler/Dialect/VMVX/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VMVX/IR/BUILD.bazel
@@ -141,6 +141,7 @@ iree_gentbl_cc_library(
 
 iree_tablegen_doc(
     name = "VMVXDialectDocGen",
+    category = "Dialects",
     tbl_outs = [
         (
             [
