--- a/compiler/src/iree/compiler/Modules/HAL/Inline/IR/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Modules/HAL/Inline/IR/CMakeLists.txt
@@ -72,6 +72,8 @@ iree_tablegen_library(
 iree_tablegen_doc(
   NAME
     HALInlineDialectDocGen
+  CATEGORY
+    "Dialects"
   TD_FILE
     "HALInlineOps.td"
   OUTS
