[Encoding] Add convertType interface to generalize type conversion (#20700)
Adds the `convertType` interface method to
`SerializableEncodingAttrInterface`. This is the first stage for
collapsing MaterializeEncodingIntoPadding into MaterializeEncoding, see
https://github.com/iree-org/iree/issues/20160.

Note that this removes the need for MaterializePadEncodingTypeConverter
if the `convertType` method is implemented for `PadEncodingLayoutAttr`,
however, this is intentionally left out of the PR as @MaheshRavishankar
is looking at adjusting the MaterializeEncodingIntoPadding for dynamic
padding. To check what it looks like with
MaterializePadEncodingTypeConverter collapsed into
MaterializeEncodingTypeConverter you can view this branch instead:
https://github.com/iree-org/iree/compare/main...jtuyls:materialize-encoding-into-padding-convert-type?expand=1.

Second note that while the type conversion for `EncodingNopLayoutAttr`
was previously combined with the common implementation for
`CPUEncodingLayoutAttr`, `VMVXEncodingLayoutAttr` and
`GPUEncodingLayoutAttr`, this PR provides a minimal standalone
implementation for clarity on what's going on. `CPUEncodingLayoutAttr`,
`VMVXEncodingLayoutAttr` and `GPUEncodingLayoutAttr` still share the
same implementation as they did previously through the `convertType`
implementation in
HostSerializableEncodingAttrInterfaceExternalModelBase.
`EncodingNopLayoutAttr` now implements both
IREE::Encoding::EncodingLayoutResolverAttrInterface and
IREE::Encoding::SerializableEncodingAttrInterface to go down the same
path as the above attributes, but provides its own implementation.

Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/ExternalInterfaces/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/ExternalInterfaces/BUILD.bazel
@@ -16,12 +16,14 @@ iree_compiler_cc_library(
     name = "ExternalModels",
     srcs = [
         "CPUEncodingExternalModels.cpp",
+        "CodegenExternalModels.cpp",
         "GPUEncodingExternalModels.cpp",
         "Interfaces.cpp",
         "Utils.cpp",
     ],
     hdrs = [
         "CPUEncodingExternalModels.h",
+        "CodegenExternalModels.h",
         "GPUEncodingExternalModels.h",
         "Interfaces.h",
         "Utils.h",
@@ -34,6 +36,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Codegen/Dialect/GPU/TargetUtils:KnownTargets",
         "//compiler/src/iree/compiler/Codegen/Utils",
         "//compiler/src/iree/compiler/Dialect/Encoding/IR",
+        "//compiler/src/iree/compiler/Dialect/TensorExt/IR",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:ArithDialect",
         "@llvm-project//mlir:IR",
