--- a/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/BUILD.bazel
@@ -27,5 +27,6 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:AffineDialect",
         "@llvm-project//mlir:AffineUtils",
         "@llvm-project//mlir:TensorDialect",
+        "@llvm-project//mlir:TransformUtils",
     ],
 )
