--- a/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/Transforms/CMakeLists.txt
@@ -22,6 +22,7 @@ iree_cc_library(
     MLIRAffineDialect
     MLIRAffineUtils
     MLIRTensorDialect
+    MLIRTransformUtils
     iree::compiler::Dialect::TensorExt::IR
   PUBLIC
 )
