--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -98,6 +98,7 @@ iree_compiler_cc_library(
         "BufferizeCopyOnlyDispatchesPass.cpp",
         "BufferizeDispatchTensorLoadStore.cpp",
         "CleanupBufferAllocViewPass.cpp",
+        "CombineLayoutTransformation.cpp",
         "ConcretizePadResultShape.cpp",
         "ConfigTrackingCanonicalizer.cpp",
         "ConvertAccGEMMToGEMMPass.cpp",
