[AMDGPU] Define gfx950 target and its MFMAs (#20623)
gfx950 is an upcoming target that gains several new MFMAs, including the
"double-wide" versions of the fp16, bf16, and int8 operations (which all
double the reduction dimension, allowing 128-bit loads of data from LDS
to feed each MFMA). It also adds some extremely wide fp8 operations
(16x16x128, for example).

This PR adds entrise to MMAIntrinsic for gfx950's new operations, adds a
KnownTargets entry for gfx950, and duplicates tests as needed to check
that the new architecture is working as expected.

---------

Co-authored-by: Jakub Kuderski <jakub@nod-labs.com>

--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -68,6 +68,7 @@ iree_lit_test_suite(
             "materialize_encoding_gfx908.mlir",
             "materialize_encoding_gfx90a.mlir",
             "materialize_encoding_gfx942.mlir",
+            "materialize_encoding_gfx950.mlir",
             "materialize_encoding_into_nop.mlir",
             "materialize_encoding_into_padding.mlir",
             "materialize_encoding_riscv.mlir",
