[Codegen][GPU] Add support for allocating private memory for unused DPS results (#20793)
Fixes https://github.com/iree-org/iree/issues/20699

Fixes bufferization failures caused by unused results of DPS ops. Adds a
`tensor_alloc` copy in private space to prevent allocation in global
space during bufferization.

---------

Signed-off-by: Muzammiluddin Syed <muzasyed@amd.com>

--- a/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/CMakeLists.txt
@@ -50,6 +50,7 @@ iree_cc_library(
     "AMDGPUDistributeContract.cpp"
     "DecomposeHorizontallyFusedGemms.cpp"
     "ExpandGPUOps.cpp"
+    "GPUAllocPrivateMemoryForDPSOps.cpp"
     "GPUApplyTilingLevel.cpp"
     "GPUBubbleResourceCasts.cpp"
     "GPUCheckResourceUsage.cpp"
