--- a/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/GPU/BUILD.bazel
@@ -57,6 +57,7 @@ iree_compiler_cc_library(
         "AMDGPUDistributeContract.cpp",
         "DecomposeHorizontallyFusedGemms.cpp",
         "ExpandGPUOps.cpp",
+        "GPUAllocPrivateMemoryForDPSOps.cpp",
         "GPUApplyTilingLevel.cpp",
         "GPUBubbleResourceCasts.cpp",
         "GPUCheckResourceUsage.cpp",
