[Codegen][GPU] Support padding in CombineLayoutTransformation (#20797)
Adds support to fold tensor.pad ops into map_scatter during
CombineLayoutTransformation. This requires moving the writing of padding
values directly to the output memref, which needs to be distributed and
tiled to a scalar store of the padding value. The distribution of the
pad is determined by a callback that returns a list of distribution tile
sizes and mappings, so that different pass implementations can decide
how to distribute the pad. By default, the padding is only distributed
to workgroups.

A new implementation of the pass for GPU backends called
`GPUCombineLayoutTransformation` is also added, which does both
workgroup and thread distribution on the pad.

---------

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -69,6 +69,7 @@ iree_cc_library(
     Common
   HDRS
     "BufferizationAnalysis.h"
+    "CombineLayoutTransformation.h"
     "EncodingUtils.h"
     "ExtractAddressComputation.h"
     "PassUtils.h"
@@ -239,6 +240,7 @@ iree_cc_library(
     iree::compiler::Dialect::HAL::IR
     iree::compiler::Dialect::LinalgExt::IR
     iree::compiler::Dialect::LinalgExt::Transforms
+    iree::compiler::Dialect::LinalgExt::Utils
     iree::compiler::Dialect::Stream::Analysis
     iree::compiler::Dialect::TensorExt::IR
     iree::compiler::Dialect::TensorExt::Transforms
