[Codegen] Add patterns to fold reshapes into load_from/store_to_memref (#20881)
Adds reshape folding patterns for iree_codegen.load_from_memref and
iree_codegen.store_to_memref. The patterns move the reshape ops from the
tensor result/operand to the buffer operand. The patterns are also added
to CleanupBufferAllocViewPass.

---------

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -25,6 +25,7 @@ iree_lit_test_suite(
             "bubble_up_ordinal_ops.mlir",
             "bufferize_copy_only_dispatches.mlir",
             "bufferize_dispatch_tensor_load_store.mlir",
+            "canonicalize_early_bufferization_ops.mlir",
             "canonicalize_interface_load_store.mlir",
             "check_for_config.mlir",
             "combine_layout_transformation.mlir",
