--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -130,6 +130,7 @@ iree_compiler_cc_library(
         "HoistUnrolledVectorExtractInsertSlice.cpp",
         "IREEComprehensiveBufferizePass.cpp",
         "IREEExpandStridedMetadata.cpp",
+        "IREEInjectAssumeAlignment.cpp",
         "IREELoopInvariantCodeMotion.cpp",
         "InstrumentMemoryAccesses.cpp",
         "LinkTuningSpecsPass.cpp",
