--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -60,6 +60,7 @@ iree_lit_test_suite(
             "iree_comprehensive_bufferize.mlir",
             "iree_expand_strided_metadata_with_subview_expansion.mlir",
             "iree_expand_strided_metadata.mlir",
+            "iree_inject_assume_alignment.mlir",
             "iree_loop_invariant_code_motion.mlir",
             "link_tuning_specs.mlir",
             "lower_ukernel_to_calls.mlir",
