[LinalgExt] Add gather reshape propagation (#20916)
This change extends `ReshapeFusion.cpp` to support propagating reshapes
through `iree_linalg_ext.gather`. The logic is very similar to `scatter`
but with the 0th and 2nd operands flipped. Additionally, the `LinalgExt`
reshape propagation tests were moved out of `DispatchCreation`. A test
pass was created in `LinalgExt` to run the reshape propagation patterns.

---------

Signed-off-by: Ian Wood <ianwood2024@u.northwestern.edu>

--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
@@ -39,6 +39,7 @@ iree_cc_library(
     "ReshapeFusion.cpp"
     "RewriteFft.cpp"
     "SplitReduction.cpp"
+    "TestReshapeFusion.cpp"
     "TileAttention.cpp"
     "TransposeFusion.cpp"
   DEPS
