--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
@@ -42,6 +42,7 @@ iree_compiler_cc_library(
         "ReshapeFusion.cpp",
         "RewriteFft.cpp",
         "SplitReduction.cpp",
+        "TestReshapeFusion.cpp",
         "TileAttention.cpp",
         "TransposeFusion.cpp",
     ],
