[Codegen][NFC] Create tiling utilities file (#20961)
This PR is part of a larger change moving
`LLVMCPUTileRootAndFuseProducerConsumer`'s tiling of parallel dimensions
to use `scf.forall` rather than `scf.for`; allowing us to take advantage
of some canonicalization patterns available on scf.forall. The patterns
available prevent redundant stack allocations seen in #20792. Tiling
parallel dimensions with `scf.forall` rather than `scf.for` could also
be said to be semantically cleaner.

As part of that change, this PR intrudes shared tiling utilities pulled
out of `TileDispatchUsingForall` that will later be used in
`LLVMCPUTileRootAndFuseProducerConsumer`.

PR 1/4 addressing #20792

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -165,6 +165,7 @@ iree_compiler_cc_library(
         "TestExecutablePreprocessing.cpp",
         "TestPartitionableLoopsInterface.cpp",
         "TileAndDistributeToWorkgroupsPass.cpp",
+        "TileAndFuseUtils.cpp",
         "TileDispatchUsingForall.cpp",
         "TileDispatchUsingInterface.cpp",
         "TileInferenceUtils.cpp",
@@ -186,6 +187,7 @@ iree_compiler_cc_library(
         "PassUtils.h",
         "Passes.h",
         "TensorDynamicDimAnalysis.h",
+        "TileAndFuseUtils.h",
         "TileInferenceUtils.h",
         "TileSizeSelection.h",
         "Transforms.h",
