[Codegen] Create `scf.forall` -> `scf.for` pass (#20962)
This PR is part of a larger change moving
`LLVMCPUTileRootAndFuseProducerConsumer`'s tiling of parallel dimensions
to use `scf.forall` rather than `scf.for`; allowing us to take advantage
of some canonicalization patterns available on scf.forall. The patterns
available prevent redundant stack allocations seen in #20792. Tiling
parallel dimensions with `scf.forall` rather than `scf.for` could also
be said to be semantically cleaner.

As part of that change, the pipeline will need to moved the tiled
`scf.forall` back to a `scf.for` as later stages expect `scf.for`. This
PR introduces a pass to do the conversion.

PR 2/4 addressing #20792

---------

Co-authored-by: Prashant Kumar <pk5561@gmail.com>
Co-authored-by: Han-Chung Wang <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -114,6 +114,7 @@ iree_cc_library(
     "FoldTensorExtractOpPass.cpp"
     "FoldTensorSubsetIntoVectorTransferOps.cpp"
     "ForOpCanonicalizationPass.cpp"
+    "ForallToFor.cpp"
     "FuseTensorPadWithConsumer.cpp"
     "GenericVectorization.cpp"
     "HoistStaticallyBoundAllocations.cpp"
