--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -124,6 +124,7 @@ iree_compiler_cc_library(
         "FoldTensorExtractOpPass.cpp",
         "FoldTensorSubsetIntoVectorTransferOps.cpp",
         "ForOpCanonicalizationPass.cpp",
+        "ForallToFor.cpp",
         "FuseTensorPadWithConsumer.cpp",
         "GenericVectorization.cpp",
         "HoistStaticallyBoundAllocations.cpp",
