--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -27,6 +27,7 @@ iree_lit_test_suite(
             "bufferize_dispatch_tensor_load_store.mlir",
             "canonicalize_early_bufferization_ops.mlir",
             "canonicalize_interface_load_store.mlir",
+            "forall_to_for.mlir",
             "check_for_config.mlir",
             "combine_layout_transformation.mlir",
             "convert_accgemm_to_gemm.mlir",
