--- a/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
@@ -49,6 +49,7 @@ iree_lit_test_suite(
     "fold_affine_min_in_distributed_loops.mlir"
     "fold_affine_min_of_block_id.mlir"
     "fold_tensor_extract_op.mlir"
+    "forall_to_for.mlir"
     "forop_canonicalization.mlir"
     "generic_vectorization.mlir"
     "hoist_statically_bound_allocations.mlir"
