Adding dummy AMDGPU channel/event. (#21041)
I still need to rip out events and change them to be something command
buffer local.

--- a/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
@@ -16,8 +16,12 @@ iree_cc_library(
   HDRS
     "api.h"
   SRCS
+    "channel.c"
+    "channel.h"
     "driver.c"
     "driver.h"
+    "event.c"
+    "event.h"
     "executable.c"
     "executable.h"
     "executable_cache.c"
