--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -22,14 +22,14 @@ iree_runtime_cc_library(
         # "buffer.h",
         # "buffer_pool.c",
         # "buffer_pool.h",
-        # "channel.c",
-        # "channel.h",
+        "channel.c",
+        "channel.h",
         # "command_buffer.c",
         # "command_buffer.h",
         "driver.c",
         "driver.h",
-        # "event.c",
-        # "event.h",
+        "event.c",
+        "event.h",
         "executable.c",
         "executable.h",
         "executable_cache.c",
